// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ScrollBoundaryContainer ScrollBoundaryContainer correctly sets height and overflow props 1`] = `
<div
  className="box overflowScroll paddingX0 paddingY0 relative"
  style={
    Object {
      "height": 200,
      "width": undefined,
    }
  }
>
  <div
    className="box"
  />
</div>
`;

exports[`ScrollBoundaryContainer renders 1`] = `
<div
  className="box overflowAuto paddingX0 paddingY0 relative"
  style={
    Object {
      "height": "100%",
      "width": undefined,
    }
  }
>
  <div
    className="box"
  />
</div>
`;
